--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>RBS_E-commerce</title>
+    <title>comfort_n_wood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
